# Q6_WebScraper_Single_Agent

./: .gitignore  .huggingface.yaml  README.md  app.py  main.py  pyproject.toml  requirements.txt
src/scraper_multi_agent/: config_agents.py  debug_shopify_agent.py  multi_agents.py  single_agent.py
src/scraper_multi_agent/tools/: debug_tool.py  shopify_scraper.py
src/scraper_single_agent/: __init__.py  single_agent.py
src/scraper_single_agent/tools/: debug_tool.py  save_to_google.py  shopify_scraper.py
